applied regan comments

--- a/thesis/content/chp-5-exprm.tex
+++ b/thesis/content/chp-5-exprm.tex
@@ -9,12 +9,10 @@
 % be honest in evaluation
 % admit weaknesses
 
-Although researchers have started to explore how affective signals can be used to augment control or adapt gameplay, there is still little systematic research to guide developers on how players respond to changes to different aspects of a game, such as the character, the enemies, or the environment. we performed a user study to determine the impact of adaptation mechanism on player experience. A four condition (Default, Player adapted, NPC adapted, Environment adapted) play session was employed to evaluate performance and excitement as dependent variables.
+Although researchers have started to explore how affective signals can be used to augment, control, or adapt gameplay, there is still little systematic research to guide developers on how players respond to changes to different aspects of a game, such as the character, the enemies, or the environment. We performed a user study to determine the impact of adaptation mechanism on player experience. A four-condition (Default, Player adapted, NPC adapted, Environment adapted) play session was employed to evaluate performance and excitement as dependent variables.
 
 \section{Participants}
-After filling in consent forms consistent with our institutional ethics approval, data were recorded from 15 male and 1 female University students, aged between 18 and 32 ($M = 25.00$, $SD = 3.875$).
-%As part of the experiment procedure demographic data were collected with special respect to the suggestions made by ~\cite{?}.
-Of the participants 94.1\% were right-handed. 41.2\% of participants rated their computer skills as Advanced while the rest of 58.8\% rated their skills as Intermediate. 35.3\% of participants have described themselves playing video games every day, while 41.2\% of them described themselves playing video games a few times per week and 17\% have been playing video games a few times per month and the rest of 5.9\% have been playing video games a few times per year. All participants have used PC as gaming system while 76.48\% of them also have used at least one of the four popular console platforms (XBox360, PS3, PS2, Wii) for gaming. All of participants had at least some experience with 3D shooting games like First Person Shooters. 47.1\% have described themselves playing 3D shooting games many times, while another 41.2\% described themselves as experts in 3D shooting games; Only a total of 11.8\% had limited or intermediate experience with 3D shooting games. Among the participants only 5.9\% had intermediate experience in using mouse in games, 35.3\% of them declared using mouse in games for many times and other 58.8\% of them described themselves as experts in doing that.
+After filling in consent forms consistent with our institutional ethics approval, data were recorded from 15 male and 1 female University students, aged between 18 and 32 ($M = 25.00$, $SD = 3.875$). Of the participants, 94.1\% were right-handed; 41.2\% of participants rated their computer skills as advanced while the rest of 58.8\% rated their skills as intermediate; 35.3\% of participants described themselves playing video games every day, whereas 41.2\% of them described themselves playing video games a few times per week and 17\% had been playing video games a few times per month, with the rest of 5.9\% having played video games a few times per year. All participants used the PC as gaming system and 76.48\% of them also have used at least one of the four popular console platforms (XBox360, PS3, PS2, Wii) for gaming. All of participants had at least some experience with 3D shooting games like First Person Shooters: 47.1\% described themselves as playing 3D shooting games many times, whereas another 41.2\% described themselves as experts in 3D shooting games – only 11.8\% had limited or intermediate experience with 3D shooting games. Among the participants, only 5.9\% had intermediate experience in using the mouse to play games, 58.8\% described themselves as experts, and 35.3\% were between expert and intermediate.
 
 \section{Procedure}
 
@@ -26,26 +24,26 @@ There were four experiment conditions (Control, Player adapted, NPC adapted, Env
 \captionof{table}{Employed order 4 Latin square}
 \begin{tabular}{+l^l^l^l}
 \bhline
-a & b & c & d \\
-b & c & d & a \\
-c & d & a & b \\
-d & a & b & c \\
+Control     & Player      & NPC         & Environment \\
+Player      & NPC         & Environment & Control \\
+NPC         & Environment & Control     & Player \\
+Environment & Control     & Player      & NPC \\
 \bhline
 \end{tabular}
 \end{center}
 %-----------------------------------------------------------
 
-All experiments were conducted on weekdays, with the first slot beginning at 11:00h and the last ending at 18:30h. Participants were contacted to choose their preferred time slots while general time for one experimental session was 1:30 hours with setup and cleanup. Participants were invited to a laboratory, after a brief introduction of the experimental procedure, and becoming aware of the data being collected during the session, they were asked to fill out and sign informed consent form, this was the only paper form used during the experiment. Then the GSR sensors were attached to participant's hand.
+All experiments were conducted on weekdays, with the first slot beginning at 11:00h and the last ending at 18:30h. Participants were contacted to choose their preferred time slots, and the overall time for one experimental session was 1:30 hours with setup and cleanup. Participants were invited to a laboratory, and after a brief introduction of the experimental procedure the data that would be collected during the session, they were asked to fill out and sign informed consent form; this was the only paper form used during the experiment. Then the GSR sensors were attached to participant's hand.
 
-Attached GSR sensors wired to the signal decoder brings limitations for participants while moving and using their hand. To diminish noisy signals and make participants feel comfortable under these limitations, the GSR sensors were attached to the hand that was handling the mouse during the game. While fingers dealing with mouse were quite steady compared to the other hand handling the keyboard, those fingers used to press the left and right mouse buttons were usually most comfortable ones for attaching GSR sensors. Some participants used index and middle fingers to press mouse buttons and others used index and ring fingers to do that \ref{fig:gsr-attached}.
+GSR sensors wired to the signal decoder can result in constraints to participant movement and to using the hands – an important factor for controlling FPS games. To diminish noisy signals and make participants feel comfortable under these limitations, the GSR sensors were attached to the hand that was handling the mouse during the game. The fingers dealing with the mouse were quite steady compared to the other hand handling the keyboard; however, the fingers used to press the left and right mouse buttons were usually also the most comfortable ones for attaching GSR sensors. Some participants used index and middle fingers to press mouse buttons and others used index and ring fingers to do so \ref{fig:gsr-attached}. We attached the GSR sensors to the middle and pinky fingers.
 
 \img
 {Attaching GSR sensors}
-{GSR sensors attached to index and middle finger of participant's right hand}
+{GSR sensors attached to pinky and middle finger of participant's right hand}
 {gsr-attached.jpg}
 {gsr-attached}
 
-Having GSR sensors attached, participants were seated in a comfortable office chair, which was adjusted according to their individual height. They were then led to fill out the initial game demographic questionnaire. To keep GSR sensors attached during the experiment, all questionnaires after attaching GSR sensors were filled out using mouse and the same computer system. After the demographic questionnaire, participants were asked to self-assess their arousal, valence and dominance level using the self assessment manikin (SAM) questionnaire ~\cite{bradley1994measuring}. Filling initial questionnaires after attaching GSR sensors was meant to give enough time (approximately 5 minutes) to the participant to get used to the sensors before playing the game. Participants then have been taken to a tour in the game. Different game mechanics were shown to them, and they were given about 1 minute, dependent to their experience, to make themselves comfortable with it. Some participants didn't need this time due to prior experience and asked to skip that. Then, participants played four different game conditions described before. Players were told to kill as many zombies as possible, and to die as few times as possible. Participants were not told about the differences between conditions. Each game condition was set to take 5 minutes. After each condition, participants were asked to write their comments about particular changes they noticed under that condition and its effect on their gameplay. Then they were asked to filled out the intrinsic motivation inventory (IMI) questionnaire, the player experience of need satisfaction (PENS) questionnaire and the game engagement questionnaire (GEQ) to rate their experience. Filling the questionnaires between conditions was done during the first par of the minimum 7 minutes of resting time before the next condition begins. The resting time was meant to restore players baseline signals; however, because we normalize GSR (see next section), a full resting GSR was not required prior to the next gameplay session. GSR sensors were recording players signals during both the play and the resting sessions from the beginning of the first condition to the ending of the last condition. After completion of the experiment, sensors were removed. Participants were debriefed and compensated \$15 Canadian dollars and escorted out of the lab.
+Having the GSR sensors attached, participants were seated in a comfortable office chair, which was adjusted according to their individual height. They were then led to fill out the initial game demographic questionnaire. To keep GSR sensors attached during the experiment, all questionnaires after attaching GSR sensors were filled out using the mouse and the same computer system. After the demographic questionnaire, participants were asked to self-assess their arousal, valence and dominance level using the self assessment manikin (SAM) questionnaire ~\cite{bradley1994measuring}. Filling initial questionnaires after attaching the GSR sensors was meant to give enough time (approximately 5 minutes) for the participant to get used to the sensors before playing the game. Participants were then taken on a tour of the game. Different game mechanics were shown to them, and they were given about 1 minute, to make themselves comfortable with the game and the controls. Some participants didn't need this time due to prior experience with FPS games (and Half-Life 2 in particular) and asked to shorten the familiarization time. Then, participants played the four different game conditions that were previously described (Control, Player, NPC Enemy, Environment). Players were told to kill as many zombies as possible, and to die as few times as possible. Participants were not told about the differences between conditions. Each game condition was set to take 5 minutes. After each condition, participants were asked to write their comments about particular changes they noticed under that condition and its effect on their gameplay. Then they were asked to complete the intrinsic motivation inventory (IMI) questionnaire, the player experience of need satisfaction (PENS) questionnaire and the game engagement questionnaire (GEQ ) to rate their experience. Filling the questionnaires between conditions was done during the first part of the minimum 7 minutes of resting time before the next condition began. The resting time was meant to restore the player's GSR signal to baseline levels; however, because we normalize GSR (see next section), a full resting GSR signal was not required prior to the next gameplay session. GSR sensors recorded players' signals during both the play and the resting sessions from the beginning of the first condition to the ending of the last condition. After completion of the experiment, the sensors were removed. Participants were debriefed and compensated \$15 Canadian dollars and escorted out of the lab.
 
 \largeimg
 {Starting buttons}
@@ -53,17 +51,17 @@ Having GSR sensors attached, participants were seated in a comfortable office ch
 {starting-buttons.png}
 {starting-buttons}
 
-For each play session, players were required to press one of the four buttons on the entrance ramp labeled 1 to 4 initiating one of the four designed conditions. When one of these buttons is pressed, the AME starts calibrating players signals for 60 seconds, during the calibration mode, no adaptation to any of game parameters is applied, no matter which condition is being played. After the one minute of calibration the system decides the standard range of signal for player's excitement value. Then, except for the condition number 1 which is the no adaptation mode, the captured excitement value is normalized using the calibrated player range of excitement into a value between 0 and 1, and this value is then used to adjust the game parameters, this process of capturing, adjusting and applying the signal value would continue for 3 minutes until the next cycle of calibrating and adaptation starts. The player is required to play every condition for at least 5 minutes to ensure capturing of a complete cycle of calibrating and adaptation.
+For each play session, players were required to have their in-game avatar press one of the four buttons on the entrance ramp labeled 1 to 4 initiating one of the four designed conditions. When one of these buttons was pressed, the Affect Middleware Engine (AME) started calibrating the player's GSR signals for 60 seconds; during the calibration mode, no adaptation to any of game parameters was applied, no matter which condition was being played. After the one minute of calibration, the system decided the standard range of the GSR signal that represented the player's excitement value. Then, except for the condition number 1 (i.e., Control no adaptation mode), the captured excitement value was normalized using the calibrated player range of excitement into a value between 0 and 1. This value was then used to adjust the game parameters; this process of capturing, adjusting and applying the signal value continued for 3 minutes until the next cycle of calibrating and adaptation started. The player was required to play every condition for at least 5 minutes to ensure that we captured a complete cycle of calibrating and adaptation.
 
-Figure ~\ref{fig:sample-signal} shows signal values for one of the participants. In this image from left to right the light blue line shows different conditions being played, and when the light blue line is declining towards its base value, that is the period that participant is asked to stop playing and instead relaxing and filling out the questionnaires. The blue line is the GSR signal value of the participant which is used as an estimation of his/her excitement level. The yellow green and pink lines are showing the three Player, NPC and Environment adapted conditions. In this image from left to right the conditions are Environment, Default, Player and the NPC adapted.
+Figure ~\ref{fig:sample-signal} shows the signal values for one of the participants. In this image from left to right, the light blue line shows different conditions being played, and when the light blue line is declining towards its base value, that is the period that participant is asked to stop playing and instead is relaxing and filling out the questionnaires. The blue line is the GSR signal value of the participant, which is used as an estimation of his/her excitement level. The yellow green and pink lines show the three Player, NPC and Environment adapted conditions. In this image from left to right the conditions are Environment, Control, Player and the NPC adapted.
 
 \largeimg
 {Sample GSR signal of a participant}
-{Sample GSR signal of a participant; From left to right the conditions are the Environment, Default, Player and the NPC adapted}
+{Sample GSR signal of a participant; From left to right the conditions are the Environment, Control, Player and the NPC adapted}
 {sample-signal.png}
 {sample-signal}
 
-The experiment was piloted with six participants (2 female). Pilot participants were selected from the Interaction Lab at the University of Saskatchewan, their comments on different mechanisms and online questionnaires of the experiment were reviewed to make participant more comfortable and less intervened during the experiment. Also pilot participants physiological data was recorded to confirm the functionality of the system during the experiment.
+The experiment was pilot tested with six participants (2 female). Pilot participants were selected from the Interaction Lab at the University of Saskatchewan; their comments on different mechanisms and online questionnaires of the experiment were reviewed to make participants more comfortable during the experiment. Also pilot participants' physiological data was recorded to confirm the functionality of the system during the experiment.
 
 %-----------------------------------------------------------
 \begin{center}
@@ -179,7 +177,7 @@ Player experience was also measured using the PENS scales for competence and aut
 
 \subsection{Did participants notice the adaptations?}
 
-We asked players after each condition to comments on the game and their performance. Although not asked specifically about adaptation, players often made comments about how the game was changing. When adapting the player, 50\% commented that they noticed changed to their player; when adapting the NPCs, 31\% of participants commented that they noticed changes to the zombies' behaviors; when adapting the environment, only 13\% of players declared that they noticed environmental changes.
+We asked players after each condition to comment on the game and their performance. Although not asked specifically about adaptation, players often made comments about how the game was changing. When adapting the player, 50\% commented that they noticed changed to their player; when adapting the NPCs, 31\% of participants commented that they noticed changes to the zombies' behaviors; when adapting the environment, only 13\% of players declared that they noticed environmental changes.
 
 %todo: add some of the participants comments
 
