--- a/thesis/content/chp-1-intro.tex
+++ b/thesis/content/chp-1-intro.tex
@@ -21,17 +21,21 @@ Recently, game developers have provided more choices in how AAA titles are playe
 
 \section{Problem}
 
-While it is possible to adapt a game to the measured performance of a player, it is harder to react to the player’s mood. This is difficult for two reasons: first because despite significant advances in affective computing, it is still difficult to reliably extract mood in real time; and second, because it is unclear what the design feedback mechanism should be to address changes in player mood in real-time or near real-time. However, even if systems could reliably detect mood, designers have no guidelines to determine how the game mechanics should be adjusted to enhance player experience. Researchers have investigated one-off approaches in the context of different games, and have adapted game elements including game graphics, screen shaking, and enemy spawn points (the number of locations in which enemies are put into the game world) ~\cite{dekker2007please}; character walking and turning speed, aiming direction, recoil amount, and firing rate ~\cite{epp2011identifying}; and flamethrower length, density of snow, enemy size, and enemy speed ~\cite{nacke2011biofeedback}. These different game elements can be loosely characterized into player abilities, enemy abilities, and the properties of the environment.
+While it is possible to adapt a game to the measured performance of a player, it is harder to react to the player's mood. This is difficult for two reasons: first because despite significant advances in affective computing, it is still difficult to reliably extract mood in real time; and second, because it is unclear what the design feedback mechanism should be to address changes in player mood in real-time or near real-time. However, even if systems could reliably detect mood, designers have no guidelines to determine how the game mechanics should be adjusted to enhance player experience. Researchers have investigated one-off approaches in the context of different games, and have adapted game elements including game graphics, screen shaking, and enemy spawn points (the number of locations in which enemies are put into the game world) ~\cite{dekker2007please}; character walking and turning speed, aiming direction, recoil amount, and firing rate ~\cite{epp2011identifying}; and flamethrower length, density of snow, enemy size, and enemy speed ~\cite{nacke2011biofeedback}. These different game elements can be loosely characterized into player abilities, enemy abilities, and the properties of the environment.
 
 Although these initial investigations have been absolutely fundamental for advancing the state of the art in affective game design, we still lack systematic studies on which types of game elements should be adapted (e.g., player abilities versus environmental variables) and how these design choices affect player performance and ultimately play experience. Therefore, the problems that we address in this thesis related to creating affective games that engage players are: game developers do not have a robust method for detecting player emotion in real-time, and, once sensed, game designers have little guidance on how to integrate player mood into game mechanics to create engaging play experiences.
 
 \section{Motivation}
 Emotions are of important component of human behaviour. Research from neuroscience, psychology, and cognitive science suggest that emotion plays a critical role in rational and intelligent behavior ~\cite{picard2001toward}. Emotion interacts with thinking in ways that are non-obvious, but important for intelligent functioning ~\cite{picard2001toward}. Scientists have amassed evidence that emotional skills are a basic component of intelligence, especially for learning preferences and adapting to what is important ~\cite{mayer1993intelligence, goleman2006emotional} People express their emotions through facial expressions, body movement, gestures and tone of voice, and expect others understand and answer to their affective state. But sometimes there is a distinction between inner emotional experiences and the outward emotional expressions ~\cite{picard2003affective}. Some emotions can be hard to recognize by humans, and inner emotional experiences may not be expressed outwardly ~\cite{jones2007biometric}. Recent extensive investigations of physiological signals for emotion detection have been providing encouraging results where affective states are directly related to change in physiological signals ~\cite{jones2007biometric}. However whether we can use physiological patterns to recognize distinct emotions is still a question ~\cite{picard2001toward, cacioppo1990inferring}.
 
-Although the study of affective computing has increased considerably during the last years, few have applied their research to play technologies ~\cite{sykes2003affective}. Emotional component of human computer interaction in video games is surprisingly important. Game players frequently turn to the console in their search for an emotional experience ~\cite{rouse2010game}. There are numerous benefits such technology could bring video game experience, like: The ability to generate game content dynamically with respect to the affective state of the player, the ability to communicate the affective state of the game player to third parties and adoption of new game mechanics based on the affective state of the player ~\cite{sykes2003affective}. Xiang et al. provided an emotion based dynamic game adjusting prototype, which utilizes facial expression captured using a camera ~\cite{xiang2013dynamic}. Sykes and Brown have shown data from gamepad correlates with a player's level of arousal during game play ~\cite{sykes2003affective}. Aggag and Revett in their work on affective gaming with use of the GSR signal, have developed a basic First-Person Shooter (FPS) that was supposed to be played in two different difficulty levels interleavingly ~\cite{aggag2011affective}. They have considered players' arousal level as a function of the difficulty of the game. Tijs et al. study on Stimulus has shown the unguided adaption of players speed has resulted the slow-mode being too slow and the fast-mode being a bit too fast for some players and described their work on induction of boredom, frustration and enjoyment through manipulation of the game mechanic ``speed'' partly successful ~\cite{tijs2009creating}.
+Although the study of affective computing has increased considerably during the last years, few have applied their research to play technologies ~\cite{sykes2003affective}. However, the emotional component of human computer interaction in video games is exceedingly important – game players frequently turn to the console in their search for an emotional experience ~\cite{rouse2010game}. There are numerous benefits that technology could bring to video game experiences, such as: the ability to generate game content dynamically with respect to the affective state of the player, the ability to communicate the affective state of the game player to third parties, and the adoption of new game mechanics based on the affective state of the player ~\cite{sykes2003affective}.
+
+For example, Xiang et al. provided an emotion based dynamic game adjusting prototype, which utilizes facial expression captured using a camera ~\cite{xiang2013dynamic}. Sykes and Brown have shown that pressure data gathered from the gamepad correlates with a player's level of arousal during game play ~\cite{sykes2003affective}. Aggag and Revett, in their work on affective gaming using galvanic skin response (GSR), have developed a basic First-Person Shooter (FPS) that was to be played in two different interleaved difficulty levels ~\cite{aggag2011affective}. They considered players' arousal levels to represent the difficulty of the game. Tijs et al. showed that the unguided adaption of player speed resulted the slow-mode being too slow and the fast-mode being a bit too fast for some players and described their work on induction of boredom, frustration and enjoyment through manipulation of the game mechanic “speed” partly successful ~\cite{tijs2009creating}.
+
+These examples demonstrate how researchers, game designers, game developers, and players are interested in intelligent games that are personalized to the player and provide a tailored game play experience.
 
 \section{Solution}
-While recognizing affect state of game players is an integral part of a true affectively-adapting dynamic game balance mechanism, we need a proper way to collect player's affect state (and not only physiological states) during the play. In 2007 Mandryk and Atkins presented a method of continuously identifying affective states of a user playing a computer game ~\cite{mandryk2007fuzzy}. Although their work focuses on physiological affect recognition approaches for video game evaluation purposes, we believe their approach is also useful to extract player's affect state in real-time to be used for game balance purposes. Mandryk and Atkins approach serves as an continuous pipeline using the dimensional emotion model and a fuzzy logic approach on a set of physiological measures to transform physiological signals such as GSR, HR, and facial EMG into arousal and valence variables and then transform arousal and valence variables into five player-centric affective states including: boredom, challenge, excitement, frustration and fun ~\ref{fig:fuzzy-transformation}. In this work we present a version of their affect recognition approach which works in real-time and in parallel to the game-engine. Using this mechanism games can have access to players affect state while playing. We believe our framework can serve to provide players affect state as a secondary input to enable affectively-adapting dynamic game balance strategies manipulate the game in a better conformity to players cognitive state to create the optimal experience (which is referred to in literature as e.g. flow ~\cite{chen2007flow} or immersion ~\cite{nacke2008flow}.
+To address the first problem of sensing affect in real-time, we created a real-time affect engine. While recognizing the affective state of game players is an integral part of a true affectively-adapting dynamic game balance mechanism, we need a method to collect player's affective state duringplay. In 2007, Mandryk and Atkins presented a method for continuously identifying the affective states of a user playing a computer game ~\cite{mandryk2007fuzzy}. Although their work focused on physiological affect recognition approaches for video game \textit{evaluation}, we believe their approach is also useful to extract the player's affect state in real-time to be used for game \textit{adaptation}. Mandryk and Atkins's approach serves as a continuous pipeline using a fuzzy logic approach on a set of physiological measures to transform physiological signals (such heart rate (HR), facial electromyography (EMG), and GSR) into arousal and valence variables to represent affective state using a dimensional approach, and then transform the arousal and valence variables into five player-centric affective states including: boredom, challenge, excitement, frustration and fun ~\ref{fig:fuzzy-transformation}. In this work we present a version of their affect recognition approach, which works in real-time and in parallel to the game-engine. Using our real-time affect engine, games can have access to the player's affective state while playing. We believe our framework can serve to provide player affect state as a secondary input to enable affectively-adapting dynamic game balance strategies to manipulate the game and create an optimal play experience, which is referred to in literature as a state of e.g. flow ~\cite{chen2007flow} or immersion ~\cite{nacke2008flow}.
 
 \largeimg
 {Fuzzy logic approach to transform physiological signals into affective states}
@@ -39,20 +43,32 @@ While recognizing affect state of game players is an integral part of a true aff
 {fuzzy-transformation.png}
 {fuzzy-transformation}
 
-\section{Contributions}
-To systematically explore affectively-adapting game elements, we created a system with which to deploy a design probe in affective game design. Our primary contribution is not the mapping of physiological variables to game state, but an understanding of how design decisions affect player experience. We created a custom zombie survival level for Half-Life 2 – a popular first person shooter (FPS) – as a test bed, and interfaced it with a system that inferred arousal from galvanic skin response (GSR) signals. Arousal state was then fed back to the player through changing aspects of the game. Our design probe investigated three ways in which games can adapt. First, we increased or decreased the strength of the player's avatar (through speed and access to weapons). Second, we manipulated the strength of the zombie opponents (through their speed and number). Third, we varied the surrounding environment to increase or decrease support for the player (through varying the spawning of health packs and the visibility of the environment due to fog). We had sixteen participants play each approach along with a non-adapting control condition, and collected data on adaptation amount, player performance, and player experience.
+To address the second problem of determining how to map affective state onto game mechanics, we systematically explored affectively-adapting game elements, by creating a system with which to deploy a design probe in affective game design. Our primary contribution is not the mapping of physiological variables to game state, but an understanding of how design decisions affect player experience. We created a custom zombie survival level for Half-Life 2 a popular first person shooter (FPS) as a test bed, and interfaced it with a system that inferred arousal from galvanic skin response (GSR) signals. Arousal state was then fed back to the player through changing aspects of the game. Our design probe investigated three ways in which games can adapt. First, we increased or decreased the strength of the player's avatar (through speed and access to weapons). Second, we manipulated the strength of the zombie opponents (through their speed and number). Third, we varied the surrounding environment to increase or decrease support for the player (through varying the spawning of health packs and the visibility of the environment due to fog). We had sixteen participants play each approach along with a non-adapting control condition, and collected data on adaptation amount, player performance, and player experience.
 
 The results of our design probe suggest that affectively-adapting games increases a player's arousal during play; however, there were differences between the three approaches. Results suggest that decreasing the challenge by adapting the number and strength of the NPC enemies is not as effective as giving the players the tools needed to overcome greater challenges, as we did when adapting the strengths of the player or the supportiveness of the environment. These results are in line with recent work that suggests that thwarting the need for competence within the context of a game affects player experience ~\cite{przybylski2013competence}. Game designers can use our results to inform their decisions on how to support players to experience competence while still optimizing player engagement.
 
-\section{Thesis Outline}
+\section{Contributions}
+This thesis makes several key contributions.
 
-In the remainder of this thesis, we will provide a discussion of related work and describe our experiment, data analyses, and results in detail.
+First, we provide the software framework for our affective engine that senses player affective state in real-time so that games can adapt to player mood.
+
+Second, we deploy a reduced version of our affective engine in a custom level of a AAA game (Half-Life 2) to demonstrate how games can adapt to player affective state.
+
+Third, we systematically explore how different game mechanics and elements can be adapted – including adaptations made to the player, the enemies, and the environment – in a study with 16 participants.
+
+Fourth, we explore how these different game adaptations affect player performance and experience within a game.
+
+Finally, we discuss our findings in the context of literature on game adaptation, game balance, and affective games.
+
+
+\section{Thesis Outline}
+In the remainder of this thesis, we provide a discussion of related work and describe our experiment, data analyses, and results in detail.
 
 \begin{itemize}
-\item In Chapter ~\ref{chap:emotion}, we first outline different emotion recognition theories with an overview of physiology sensors, and then we describe the state of affective games.
-\item Chapter ~\ref{chap:video-games} gives an overview of ideas around flow in video games and different game balance theories. It also explores recent works have done on affective gaming and dynamically game balancing.
-\item In Chapter ~\ref{chap:impl} we explore some implementation details of our system that adapts game play based on a user's affective state.
-\item Chapter ~\ref{chap:exprm} follow with an account of our design probe with sixteen participants, and the results that we found in terms of adaptation, performance, and player experience.
+\item In Chapter ~\ref{chap:emotion}, we first outline different emotion recognition theories with an overview of physiological sensors, and then we describe the state of affective games.
+\item Chapter ~\ref{chap:video-games} gives an overview of ideas around flow in video games and different game balance theories. It also explores recent work on affective gaming and dynamic game balancing.
+\item In Chapter ~\ref{chap:impl} we provide the implementation details for our system that adapts game play based on a user’s affective state.
+\item Chapter ~\ref{chap:exprm} follows with an account of our design probe with sixteen participants, and the results that we found in terms of adaptation, performance, and player experience.
 \item Chapter ~\ref{chap:discus} discusses our findings and presents opportunities for future work.
-\item Finally, we give our conclusion in Chapter ~\ref{chap:conclusion}.
+\item Finally, we provide a conclusion to our work in Chapter ~\ref{chap:conclusion}.
 \end{itemize}
