--- a/thesis/content/app-gsr-hr-to-arousal.tex
+++ b/thesis/content/app-gsr-hr-to-arousal.tex
@@ -1,4 +1,4 @@
-\begin{lstlisting}[language=xml]
+\begin{lstlisting}[language=xml, frame=none]
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <FUNCTION_BLOCK>
   <VAR_INPUT NAME="Arousal" TYPE="REAL" RANGE="0 100" />
