--- a/thesis/content/chp-6-discus.tex
+++ b/thesis/content/chp-6-discus.tex
@@ -19,4 +19,4 @@ Self-determination theory ~\cite{ryan2000self} suggests that we strive to master
 Recent research in violent imagery in games and the resulting aggression that players experience has suggested that impeding competence in video games fosters aggressive thoughts, regardless of the presence or absence of violent imagery ~\cite{przybylski2013competence}. The authors show how manipulating competence (through manipulating frustrating and complex control schemes, levels of player experience, or game challenges) thwarts need satisfaction amongst players, and increases their access to aggressive thoughts. Although the domain of evaluation (aggressive thoughts) is distinct from our goals, the hypothesis that impeding competence in games thwarts satisfaction of this basic need helps to explain why giving players less challenge to master (as in the NPC condition) does not work as well as giving players the tools and support needed to master greater challenges, as in the Player and Environment conditions.
 
 \section{Limitations and future work}
-This design probe represents preliminary work into the domain of affectively-adapting games. There are several limitations in our work that present opportunities for future research. First, the number of participants that we included in our design probe is low ($n=16$). Conducting a large-scale experiment would increase the power of our experiment and could reveal differences between the approaches or strengthen existing differences (e.g., the planned contrasts). Second, we investigated the adaptation in a single game genre (FPS game) with specific approaches (e.g., manipulating speed and weapons). Investigating whether our results hold in a different genre or with different adaptation choices would help to generalize our findings. Third, we only adapted based on a player's galvanic skin response. Using a more sophisticated model that included signals to access player valence (e.g., ~\cite{mandryk2007fuzzy}) would qualify the player's arousal as either positive or negative in nature. Finally, as noted previously in the discussion, we could consider applying our approach of adaptation based on performance variables, rather than player affect, to examine DDA for the purpose of balancing multiplayer games.
+This design probe represents preliminary work into the domain of affectively-adapting games. There are several limitations in our work that present opportunities for future research. First, the number of participants that we included in our design probe is low ($n=16$). Conducting a large-scale experiment would increase the power of our experiment and could reveal differences between the approaches or strengthen existing differences (e.g., the planned contrasts). Second, we investigated the adaptation in a single game genre (FPS game) with specific approaches (e.g., manipulating speed and weapons). Investigating whether our results hold in a different genre or with different adaptation choices would help to generalize our findings. Third, we only adapted based on a player's galvanic skin response. Employing the full affective engine to access arousal and valence (e.g., ~\cite{mandryk2007fuzzy}) would qualify the player's arousal as either positive or negative in nature. Finally, as noted previously in the discussion, we could consider applying our approach of adaptation based on performance variables, rather than player affect, to examine DDA for the purpose of balancing multiplayer games.
