--- a/thesis/content/chp-7-conclusion.tex
+++ b/thesis/content/chp-7-conclusion.tex
@@ -6,4 +6,4 @@
 
 Drawing a player into an optimally-engaging play experience is a goal of many game designers and developers. We investigated various approaches to adjusting games based on a player's affective state and found that affectively-adapting games were more arousing than the non-adapted version. We also suggest that adapting the NPC enemies is not as effective a strategy as adapting the player or environment, because it reduces the opportunity for the player to experience challenge, rather than giving players the necessary tools or assistance to master a greater challenge.
 
-The results of our design probe can be used to inform future research in affective games or adaptive games, and can help game designers understand how their choices affect the experience of the player.
+The results of this research can be used to inform future research in affective games or adaptive games, and can help game designers understand how their choices affect the experience of the player.
